--- a/chemicals.html
+++ b/chemicals.html
@@ -18,7 +18,7 @@
         </nav>
         <div class="container">
             <div class="chem-image">
-    <a href="" target='_blank'><img src="images/chemicals-image1.jpg" height=600px; alt="Photo of a Woman with Blonde Braids"></a>
+    <a href="" target='_blank'><img src="chemicals-image1.jpg" height=600px; alt="Photo of a Woman with Blonde Braids"></a>
         </div>
     <div class="chem-header">
         <h1>What Are These Chemicals?</h1>
