--- a/chemicals.html
+++ b/chemicals.html
@@ -76,7 +76,7 @@
                 <td>123%</td>
                 </tr>
                 <tr>
-                    <td>Sensationnel <a href="https://www.sensationnel.com/product/lulutress-3x-fluffy-passion-twist-14/" target='_blank'><img src="https://image.samsbeauty.com/common/productimages/56662663/B_yfazdnj1722336584335_500.jpg alt="Lulutress Crochet Braid Passion Twist,12"" height="300px"> </td>
+                    <td>Sensationnel <a href="https://www.sensationnel.com/product/lulutress-3x-fluffy-passion-twist-14/" target='_blank'><img src="https://image.samsbeauty.com/common/productimages/56662663/B_yfazdnj1722336584335_500.jpg" alt="Lulutress Crochet Braid Passion Twist,12"" height="300px"> </td>
                     <td>128%</td>
                     </tr>
             </tr>
