--- a/chemicals.html
+++ b/chemicals.html
@@ -67,7 +67,7 @@
                 <th>Lead Level (% of MADL)</th>
             </tr>
             <tr>
-                <td>Sensationnel <a href="https://www.sensationnel.com/product/3x-x-pression-pre-stretched-braid-58/" target='_blank'><img src="https://image.samsbeauty.com/common/productimages/79358718/B_79358718_main_1500_500.jpg" alt="Sensationnel X-Pression 3X Pre-Stretched Braid, 58"" height="300px"> </td>
+                <td>Sensationnel <a href="https://www.sensationnel.com/product/3x-x-pression-pre-stretched-braid-58/" target='_blank'><img src="sensationnel-1.jpg" alt="Sensationnel X-Pression 3X Pre-Stretched Braid, 58"" height="300px"> </td>
                 <td>Not Determined</td>
             </tr>
             <tr>
