--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                     </ol>
                 </div>
                 </div>
+    </div>
                 <footer>
                     <div>
                         <p id="useless-copyright">(c) Mikala Everett 2025</p>
