--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+<html>
     <head>
         <meta charset="uft-8">
         <meta name="Author" content="Mikala Everett">
@@ -31,12 +32,12 @@
                 Luckily, Consumer Report scienists tested ten of the most popular synthetic braiding hair products and their findings can be seen below.  </P>
                 </div>
 <div class="braids-image">
-    <a href="https://www.consumerreports.org/health/wigs-hair-extensions/dangerous-chemicals-detected-in-braiding-hair-cr-tested-a4850978424/" target='_blank'><img src="braiding-main.jpg" height="600px"; alt="Photo of a Woman with Braids Sitting by Water"></a>
+    <a href="https://www.consumerreports.org/health/wigs-hair-extensions/dangerous-chemicals-detected-in-braiding-hair-cr-tested-a4850978424/" target='_blank'><img src="images/braiding-main.jpg" height="600px"; alt="Photo of a Woman with Braids Sitting by Water"></a>
    
 </div>
                 <div class="table-section-1">
                     <h3>Consumer Report Test Results:</h3>
-                    <table border="1>
+                    <table border="1" style="border-collapse:collapse;">
                             <tr>
                                 <th>Harmful Chemicals</th>
                                 <th>Results</th>
@@ -69,7 +70,7 @@
                     </ol>
                 </div>
                 </div>
-    </div>
+            </div>
                 <footer>
                     <div>
                         <p id="useless-copyright">(c) Mikala Everett 2025</p>
