--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 Luckily, Consumer Report scienists tested ten of the most popular synthetic braiding hair products and their findings can be seen below.  </P>
                 </div>
 <div class="braids-image">
-    <a href="https://www.consumerreports.org/health/wigs-hair-extensions/dangerous-chemicals-detected-in-braiding-hair-cr-tested-a4850978424/" target='_blank'><img src="images/braiding-main.jpg" height="600px"; alt="Photo of a Woman with Braids Sitting by Water"></a>
+    <a href="https://www.consumerreports.org/health/wigs-hair-extensions/dangerous-chemicals-detected-in-braiding-hair-cr-tested-a4850978424/" target='_blank'><img src="braiding-main.jpg" height="600px"; alt="Photo of a Woman with Braids Sitting by Water"></a>
    
 </div>
                 <div class="table-section-1">
