--- a/about.html
+++ b/about.html
@@ -29,6 +29,7 @@
     <ul>
         <li>Association, American Lung. “Volatile Organic Compounds.” American Lung Association, 21 Oct. 2024, www.lung.org/clean-air/indoor-air/indoor-air-pollutants/volatile-organic-compounds. </li>
         <li>Jackson, Leigh-Ann. “Dangerous Chemicals Were Detected in 100% of the Braiding Hair We Tested.” Consumer Reports, 27 Feb. 2025, www.consumerreports.org/health/wigs-hair-extensions/dangerous-chemicals-detected-in-braiding-hair-cr-tested-a4850978424/. </li>
+        <li>Smith, Erica. “This Gorgeous Photo Series Is Full of Hairspiration.” The Cut, The Cut, 11 Jan. 2019, www.thecut.com/2019/01/the-hair-appointment-celebrates-black-hair-braiding.html. </li>
         <li>Thomas, Chrystal G. “Carcinogenic Materials in Synthetic Braids: An Unrecognized Risk of Hair Products for Black Women.” ScienceDirect, Elsevier, 26 May 2023, www.sciencedirect.com/science/article/pii/S2667193X23000911?via%3Dihub. </li>
     </ul>
     </div>
